--- a/styles/style.css
+++ b/styles/style.css
@@ -42,6 +42,11 @@ img {
 .banner-items i {
     font-size: 1.5rem;
 }
+.section-title{
+    font-size: 2.8rem;
+    font-weight: 700;
+    color: #0B0223;
+}
 
 .section-description {
     font-size: 1.125rem;
@@ -180,7 +185,20 @@ nav {
 /* Game Video Section CSS */
 
 .game-video-section{
-    padding-top: 7.5rem;
+    padding: 7.5rem 12.5rem;
+}
+.game-video-container{
+    text-align: center;
+    margin-bottom: 2.8rem;
+}
+.game-video-container h3{
+    margin-bottom: 1rem;
+}
+
+.card{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 1rem;
 }
 
 
