feature section created

--- a/styles/style.css
+++ b/styles/style.css
@@ -244,7 +244,7 @@ nav {
         padding-left: 1.25rem;
     }
     .game-video-section{
-        padding: 0;
+        padding: 5rem 0;
     }
     .game-video-container{
         margin: 2rem 2.5rem;
