--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,8 @@
     margin: 0;
     padding: 0;
 }
-:root{
+
+:root {
     font-size: 16px;
 }
 
@@ -45,7 +46,8 @@ img {
 .banner-items i {
     font-size: 1.5rem;
 }
-.section-title{
+
+.section-title {
     font-size: 2.8rem;
     font-weight: 700;
     color: #0B0223;
@@ -55,6 +57,7 @@ img {
     font-size: 1.125rem;
     font-weight: 400;
     color: #534C64;
+    line-height: 1.5rem;
 }
 
 .linear-text {
@@ -65,10 +68,19 @@ img {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
-.section-width{
+
+.linear-pink {
+    background: linear-gradient(360deg, #F948B2 0%, #F948B2 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.section-width {
     padding-left: 12.5rem;
     padding-right: 12.5rem;
 }
+
 /* Header Section */
 
 /* Nav Bar related CSS */
@@ -134,7 +146,8 @@ nav {
     background-size: contain;
     padding: 0 12.5rem;
 }
-.banner-content{
+
+.banner-content {
     display: flex;
     gap: 5rem;
 }
@@ -160,7 +173,8 @@ nav {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
-.banner-info a{
+
+.banner-info a {
     text-decoration: none;
 }
 
@@ -182,29 +196,33 @@ nav {
     color: #534C64;
 
 }
+
 .banner-image {
     padding-top: 1.5rem;
 }
 
 /* Game Video Section CSS */
 
-.game-video-section{
+.game-video-section {
     padding: 7.5rem 12.5rem;
 }
-.game-video-container{
+
+.game-video-container {
     text-align: center;
     margin-bottom: 2.8rem;
 }
-.game-video-container h3{
+
+.game-video-container h3 {
     margin-bottom: 1rem;
 }
 
-.card-box{
+.card-box {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 1.25rem;
 }
-.card-caption{
+
+.card-caption {
     font-weight: 500;
     color: #534C64;
     margin-top: 1.5rem;
@@ -212,15 +230,20 @@ nav {
 
 
 /* Feature Seciton CSS */
-.feature-section{
+.feature-section {
     display: flex;
     gap: 10rem;
 }
+
 .feature-content {
     text-align: right;
     width: 40%;
     margin: 12.5rem 3rem;
 }
+.feature-content h3{
+    margin-bottom: 1.5rem;
+}
+
 .img-card {
     position: relative;
     bottom: 250px;
@@ -233,29 +256,37 @@ nav {
 
 
 
-.hide{
+.hide {
     display: none;
 }
+
 @media screen and (max-width: 576px) {
-    nav, .nav-right, .nav-right > ul{
+
+    nav,
+    .nav-right,
+    .nav-right>ul {
         flex-direction: column;
         align-items: center;
         padding: 0;
 
     }
-    .nav-left{
+
+    .nav-left {
         margin-bottom: 3rem;
         padding-top: 2rem;
     }
-    .banner-section{
+
+    .banner-section {
         padding: 0;
         background-image: none;
     }
-    .banner-content{
+
+    .banner-content {
         flex-direction: column-reverse;
         margin: 0 1.25rem;
     }
-    .banner-info{
+
+    .banner-info {
         width: 100%;
         background-image: url('../images/Group\ 14.png');
         background-repeat: no-repeat;
@@ -264,21 +295,26 @@ nav {
         padding-top: 5rem;
         padding-left: 1.25rem;
     }
-    .game-video-section{
+
+    .game-video-section {
         padding: 5rem 0;
     }
-    .game-video-container{
+
+    .game-video-container {
         margin: 2rem 2.5rem;
         padding: 1.25rem;
     }
-    .card-box{
+
+    .card-box {
         grid-template-columns: repeat(1, 1fr);
         padding: 0rem 2.5rem;
     }
-    .card{
+
+    .card {
         text-align: center;
     }
-    .card > p{
+
+    .card>p {
         margin: 0.5rem;
     }
 }
