footer section design finished

--- a/styles/style.css
+++ b/styles/style.css
@@ -135,7 +135,12 @@ nav {
     padding: 1rem 1.5rem;
     border-radius: 0.5rem;
 }
-
+#youtube{
+    color: #F61C0D;;
+}
+#tiktok{
+    color: #000000;
+}
 
 /* Banner Section CSS */
 .banner-section {
@@ -284,7 +289,73 @@ nav {
     padding: .375rem;
 }
 
+/* Footer Section CSS */
 
+.footer-section{
+    background-color: #0B0223;
+}
+.logo-container {
+    display: flex;
+    justify-content: center;
+    gap: 1.25rem;
+    margin-bottom: 4rem;
+    align-items: center;
+    padding-top: 8rem;
+}
+.logo-container > h3{
+    font-size: 2.8rem;
+    font-weight: 700;
+    color: #FFF;
+}
+.footer-nav > ul {
+    display: flex;
+    justify-content: center;
+    gap: 4rem;
+    margin-bottom: 3.5rem;
+}
+.footer-nav li{
+    list-style: none;  
+    font-size: 1.125rem; 
+    font-weight: 600;
+    color: #FFF;
+}
+.social-icons {
+    display: flex;
+    gap: 2.5rem;
+    justify-content: center;
+    margin-bottom: 4.5rem;
+}
+.social-icons > span{
+    font-size: 2rem;
+}
+.information > ul {
+    display: flex;
+    gap: 4rem;
+    justify-content: center;
+    margin-bottom: 3rem;
+}
+.information li{
+    list-style: none;
+}
+
+.copyright {
+    text-align: center;
+    padding-bottom: 8rem;
+}
+.copyright p, .information li{
+    font-weight: 500;
+    color: #9d9696;
+
+}
+#twitter, #linkedin, #instagram, #apple{
+    color: #FFF;
+}
+#facebook{
+    color: #1877F2;
+}
+#youtube-2{
+    color: #FF0000;
+}
 
 
 
