--- a/styles/style.css
+++ b/styles/style.css
@@ -206,6 +206,38 @@ nav {
     padding-top: 1.5rem;
 }
 
+/* Gamers Section CSS */
+
+.gamers-section{
+    display: flex;
+    grid-area: 3.25rem;
+    background-color: #fff9fc;
+    padding-top: 6rem;
+}
+.gamers-content{
+    width: 67%;
+    text-align: right;
+}
+.gamers-content h3{
+    margin-bottom: 1.5rem;
+}
+.gamers-content p{
+    margin-bottom: 2rem;
+}
+.goals{
+    margin-top: 1.5rem;
+}
+.goals strong{
+    font-size: 1.5rem;
+    font-weight: 500;
+    color: #534C64;
+}
+.goals h6{
+    font-size: 2rem;
+    font-weight: 700;
+    color: #534C64;
+}
+
 /* Game Video Section CSS */
 
 .game-video-section {
