--- a/styles/style.css
+++ b/styles/style.css
@@ -272,6 +272,24 @@ nav {
     color: #534C64;
     margin-top: 1.5rem;
 }
+.card-image{
+    position: relative;
+}
+.play-btn{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.02);
+    opacity: 0;
+    transition: 0.6s;
+}
+.play-btn:hover{
+    opacity: 1;
+}
+
+
 
 
 /* Feature Seciton CSS */
@@ -299,35 +317,56 @@ nav {
 .games{
     margin-bottom: 8rem;
 }
-.first-row {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    gap: 0.5rem;
-    margin-bottom: 3rem;
-}
-.second-row {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    padding: 0 3rem;
-    gap: 1.5rem;
+.games-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 1rem;
 }
 .game-type {
     display: flex;
     align-items: center;
-    gap: 1rem;
-    transition: .5s ease-in-out;
-    border: 0;
+    gap: 0.5rem;
+    border: none;
+    justify-content: flex-start;
+    transition: 0.5s;
 }
-.game-type:hover {
+.game-type:hover{
+    border: 2px solid #F948B2;
+    border-radius: 3rem;
+    color: #F948B2;
+}
+
+/* .first-row {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 0.5rem;
+    margin-bottom: 3rem;
+} */
+/* .second-row {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    padding: 0 3rem;
+    gap: 1.5rem;
+} */
+/* .game-type {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+} */
+
+/* .game-type:hover {
+    
+    color:#FF42A5
+} */
+/* .game-type:hover{
+    color:#FF42A5;
     border: 2px solid #FF42A5;
     border-radius: 3rem;
-}
-.game-type:hover .game-info{
-    color:#FF42A5
-}
-.game-icon{
+} */
+/* .game-icon{
     padding: .375rem;
-}
+} */
 
 /* Footer Section CSS */
 
