--- a/styles/style.css
+++ b/styles/style.css
@@ -272,23 +272,47 @@ nav {
     color: #534C64;
     margin-top: 1.5rem;
 }
-.card-image{
+.card{
     position: relative;
 }
-.play-btn{
+.card > img{
+    display: block;
+}
+.overlay {
     position: absolute;
-    width: 100%;
+    opacity: 0;
+    background-color: rgba(0,0,0,0.5);
     height: 100%;
+    width: 100%;
     top: 0;
     left: 0;
-    background: rgba(0, 0, 0, 0.02);
-    opacity: 0;
-    transition: 0.6s;
+    transition: .5s;
+    border-radius: 14px;
 }
-.play-btn:hover{
+.card:hover .overlay{
     opacity: 1;
 }
+.play-btn{
+    color: #F948B2;
+    position: absolute;
+    top: 45%;
+    left: 30%;
+    text-align: center;
 
+}
+.play-btn > a{
+    text-decoration: none;
+}
+.play-btn i{
+    font-size: 1.8rem;
+    color: #FFF;
+}
+.play-btn p{
+    font-size: 1.125rem;
+    color: #F948B2;
+    font-weight: 500;
+    margin-top: 0.5rem;
+}
 
 
 
@@ -336,37 +360,9 @@ nav {
     border-radius: 3rem;
     color: #F948B2;
 }
-
-/* .first-row {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    gap: 0.5rem;
-    margin-bottom: 3rem;
-} */
-/* .second-row {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    padding: 0 3rem;
-    gap: 1.5rem;
-} */
-/* .game-type {
-    display: flex;
-    align-items: center;
-    gap: 0.5rem;
-} */
-
-/* .game-type:hover {
-    
-    color:#FF42A5
-} */
-/* .game-type:hover{
-    color:#FF42A5;
-    border: 2px solid #FF42A5;
-    border-radius: 3rem;
-} */
-/* .game-icon{
+.game-icon{
     padding: .375rem;
-} */
+}
 
 /* Footer Section CSS */
 
